Improve the enigma mission and add end game credits

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ venv/
 *.tmp
 
 # Sauvegardes automatiques et manuelles
-sources/backups/automatic/*.json
-sources/backups/manual/*.json
+data/backups/automatic/*.json
+data/backups/manual/*.json
 
 # Autres fichiers
 *.orig
